Aligned the div genre1 & genre2 correctly.

--- a/style.css
+++ b/style.css
@@ -55,19 +55,28 @@ form {
 	list-style-type: none;
 }
 
+.genre-text{
+	display: block;
+}
+
 #genre2>ul>li {
 	list-style-type: none;
 }
 
-
-#genre1 {
-	margin-left: -50px;
-	float: left;
+#genre2 {
+	display: inline-block;
 }
 
-#genre2 {
-	clear: both;
-	float: right;
+#genre1 {
+	/*margin-left: -50px;*/
+	/*float: left;*/
+	display:inline-block;
+}
+#genre1 > ul {
+	padding-left: 0px
+}
+#genre2 > ul {
+	padding-left: 0px;
 }
 
 /* Nav */
